--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">pr1</string>
+    <string name="app_name">НМедиа</string>
+    <string name="s1">Мы учимся в БТПИТ!</string>
 </resources>
